[tool.poetry]
name = "blog-sfu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_sfu"}]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.0"
async-generator = "1.10"
attrs = "21.4.0"
certifi = "2022.5.18.1"
cffi = "1.15.0"
cryptography = "37.0.2"
django = "4.0.2"
djangorestframework = "3.13.1"
h11 = "0.13.0"
idna = "3.3"
outcome = "1.2.0"
pycparser = "2.21"
pyopenssl = "22.0.0"
pysocks = "1.7.1"
python-dotenv = "0.19.2"
pytz = "2022.1"
selenium = "4.2.0"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
sqlparse = "0.4"
trio = "0.21.0"
trio-websocket = "0.9.2"
tzdata = "2021.5"
urllib3 = "1.26.9"
wsproto = "1.1.0"
webdriver-manager = "3.7.0"
djoser = "2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
